<resources>
    <string name="app_name">ASmallMuseum</string>
    <string name="facebook_app_id" translatable="false">1731723653672740</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1731723653672740</string>

    <string name="email_login">SIGN UP WITH EMAIL</string>
    <string name="google_login">SIGN IN WITH GOOGLE</string>
    <string name="naver_login">SIGN IN WITH NAVER</string>
    <string name="kakao_login">SIGN IN WITH KAKAO</string>


    <string name="test1">TEST 1</string>
    <string name="test2">LONG TEXT TEST</string>
    <string name="test3">LONG LONG LONG LONG TEXT TEST</string>
    <string name="test4" translatable="false">2020-01-04</string>
    <string name="test5">VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY VERY
    LONG LONG LONG LONG LONG LONG LONG LONG LONG LONG LONG LONG LONG LONG LONG LONG LONG LONG LONG LONG LONG LONG TEXT</string>
    <string name="welcome_test">Hi, Welcome to the "'"A Small Museum"'".</string>

    <string name="cat_music" translatable="false">Music</string>
    <string name="cat_paints" translatable="false">Paints</string>
    <string name="cat_pictures" translatable="false">Pictures</string>
    <string name="cat_Upload" translatable="false">Upload</string>
    <string name="cat_support" translatable="false">Support</string>
    <string name="cat_profile" translatable="false">Profile</string>
    <string name="cat_menu" translatable="false">Menu</string>

    <string name="up_post">Post</string>
    <string name="up_test_title">Test Title</string>
    <string name="up_title">Title…</string>
    <string name="up_desc">Description…</string>
    <string name="up_category">"Category: "</string>
    <string name="up_type">"Type: "</string>

    <string name="welcome_sign_in">SignIn/Up</string>
    <string name="main_menu_support">Support</string>

    <string name="profile_profile">my profile</string>
    <string name="profile_history">my history</string>
    <string name="profile_sign_out">Sign-out</string>
    <string name="profile_posting">Posting</string>

    <!-- SignInActivity -->
    <string name="id">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign-In</string>
    <string name="sign_up">Sign-Up</string>
    <string name="or">---OR---</string>

    <string name="email_verify_text">click next button \n after confirm your email</string>
    <string name="resend">resend verification email</string>
    <string name="next">Next</string>
    <string name="welcome" translatable="false">Welcome</string>
    <string name="home" translatable="false">Home</string>

    <string name="email_id" translatable="false">Email ID</string>
    <string name="spinner" translatable="false">\u0040</string>
    <string name="verified_password">Verify password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nick_name">Nick Name</string>
    <string name="birth">Date of Birth</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>

    <!-- UserProfileActivity -->
    <string name="nick_name_text">Nick Name: </string>
    <string name="user_nick_name">user nickname</string>
    <string name="update_pwd">Update Password</string>
    <string name="first_name_text">First Name: </string>
    <string name="user_first_name">user first name</string>
    <string name="last_name_text">Last Name: </string>
    <string name="user_last_name">user last name</string>
    <string name="birth_text">Birth: </string>
    <string name="user_birth">user birth</string>
    <string name="update_info">Update Information</string>
    <string name="new_pwd_text">New Password: </string>
    <string name="new_pwd">New Password</string>
    <string name="ver_pwd_text">Verify Password: </string>
    <string name="ver_pwd">Verify Password</string>

    <string name="post">Posts</string>
    <string name="reviews">Reviews</string>
    <string name="like">Like</string>
    <string name="test_0" translatable="false">0</string>
    <string name="report">Report</string>
    <string name="author">Author:</string>
    <string name="title">Title: </string>
    <string name="view_detail">View detail</string>
    <string name="review_text">Write your thoughts.</string>
    <string name="review">Review</string>

    <string name="recent_text">Latest images</string>
    <string name="recommend_text">Recommend images</string>
    <string name="right_arrow" translatable="false">></string>


    <!--    Support     -->
    <string name="support_welcome">Thank you for joining us!</string>
    <string name="contact_text" translatable="false">If you have any questions or suggestions, \nplease send an email us below:</string>
    <string name="contact_mail" translatable="false">sonsdevelop@gmail.com</string>
    <string name="test_version" translatable="false">Version: 0.0.1</string>
    <string name="test_web_address" translatable="false">asmuseum.com</string>

    <string-array name="arts_categories">
        <item>Select</item>
        <item>Fine Arts</item>
        <item>Visual Arts</item>
        <item>Applied Arts</item>
        <item>Others</item>
        <item>Museums</item>
    </string-array>

    <string-array name="museums">
        <item>Select</item>
        <item>Seoul Art Gallery</item>
        <item>Soma Art Gallery</item>
        <item>Test</item>
    </string-array>

    <string-array name="type_fine">
        <item>Select</item>
        <item>Drawing</item>
        <item>Painting</item>
        <item>Sculpture</item>
        <item>Printing</item>
        <item>Calligraphy</item>
        <item>Etc..</item>
    </string-array>

    <string-array name="type_visual">
        <item>Select</item>
        <item>Photography Arts</item>
        <item>Environment Arts</item>
        <item>Assemblage</item>
        <item>Collage</item>
        <item>Conceptual</item>
        <item>Installation</item>
        <item>Etc..</item>
    </string-array>

    <string-array name="type_applied">
        <item>Select</item>
        <item>Computer Arts</item>
        <item>Graphic Arts</item>
        <item>Fashion Arts</item>
        <item>Interior Arts</item>
        <item>Etc..</item>
    </string-array>

    <string-array name="type_others">
        <item>Select</item>
        <item>Plastic Arts</item>
        <item>Decorative Arts</item>
        <item>Etc..</item>
    </string-array>

    <string-array name="etc">
        <item>Select</item>
        <item>Etc..</item>
    </string-array>

    <string-array name="arts_categories_spinner">
        <item>Select</item>
        <item>Fine Arts</item>
        <item>Visual Arts</item>
        <item>Applied Arts</item>
        <item>Others</item>
    </string-array>

    <string-array name="spinner_select">
        <item>Select</item>
    </string-array>

    <!-- TODO: Menu elements -->
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_report">Report</string>

    <!-- TODO: Error Messages for Artwork -->
    <string name="title_error">Please enter the title.</string>
    <string name="type_error">Please select a type.</string>
    <string name="category_error">Please select a category.</string>
    <string name="desc_error">Please enter the description of the art.</string>

    <!-- TODO: Messages for Art Upload Activity -->
    <string name="upload_accept">Accept</string>
    <string name="upload_cancel">Cancel</string>
    <string name="upload_message">Are you sure?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="internet_connection_fail">Internet Connection Failed.</string>
    <string name="ok">OK</string>
    <string name="enter_email">ENTER THE EMAIL</string>
</resources>