<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SignIn.SignUpOthersFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fragment_sign_up_others_user_nick_name"
            android:hint="@string/nick_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/fragment_sign_up_others_user_last_name"
            android:hint="@string/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/fragment_sign_up_others_user_first_name"
            android:text="@string/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/fragment_sign_up_others_user_birth"
            android:text="@string/birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/fragment_sign_up_others_submit_button"
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</FrameLayout>