<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SignIn.SignInEmailVerifyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/email_verify_text"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/fragment_sign_in_email_verify_resend"
            android:text="@string/resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/fragment_sign_in_email_verify_next"
            android:text="@string/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/fragment_sign_in_email_verify_sign_out"
            android:text="@string/profile_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</FrameLayout>