<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SignIn.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/fragment_sign_up_email_layout"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <EditText
                android:id="@+id/fragment_sign_up_email"
                android:hint="@string/email_id"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"/>

            <EditText
                android:id="@+id/fragment_sign_up_spinner_text"
                android:text="@string/spinner"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/fragment_sign_up_spinner_edit"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Spinner
                android:id="@+id/fragment_sign_up_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <EditText
            android:id="@+id/fragment_sign_up_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_email_layout"
            app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_check_pass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/fragment_sign_up_check_pass"
            android:hint="@string/verified_password"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_password"
            app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/fragment_sign_up_first_name"
            android:hint="@string/first_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_check_pass"
            app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/fragment_sign_up_last_name"
            android:hint="@string/last_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_first_name"
            app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_nick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/fragment_sign_up_nick"
            android:hint="@string/nick_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_last_name"
            app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_birth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/fragment_sign_up_birth"
            android:hint="@string/birth"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="date"
            app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_nick"
            app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_button_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/fragment_sign_up_button_layout"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_birth"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/fragment_sign_up_back_button"
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/fragment_sign_up_submit_button"
                android:text="@string/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>