<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.UserProfile.UserProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/layout_top_bar"
            android:id="@+id/fragment_user_profile_top_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_user_profile_nickname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nick_name"
            android:textSize="30sp"
            android:id="@+id/fragment_user_profile_nickname"
            android:layout_marginStart="10dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fragment_user_profile_user_nickname"
            app:layout_constraintBottom_toTopOf="@id/fragment_user_profile_update_password_button"
            app:layout_constraintTop_toBottomOf="@id/fragment_user_profile_top_bar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_nick_name"
            android:textSize="30sp"
            android:id="@+id/fragment_user_profile_user_nickname"
            app:layout_constraintLeft_toRightOf="@id/fragment_user_profile_nickname"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_user_profile_update_password_button"
            app:layout_constraintTop_toBottomOf="@id/fragment_user_profile_top_bar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_pwd"
            android:id="@+id/fragment_user_profile_update_password_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_user_profile_user_firstname"
            app:layout_constraintTop_toBottomOf="@id/fragment_user_profile_user_nickname"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name_text"
            android:id="@+id/fragment_user_profile_firstname_text"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fragment_user_profile_user_firstname"
            app:layout_constraintBottom_toTopOf="@id/fragment_user_profile_user_lastname"
            app:layout_constraintTop_toBottomOf="@id/fragment_user_profile_update_password_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_first_name"
            android:id="@+id/fragment_user_profile_user_firstname"
            android:textSize="30sp"
            app:layout_constraintLeft_toRightOf="@id/fragment_user_profile_firstname_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_user_profile_user_lastname"
            app:layout_constraintTop_toBottomOf="@id/fragment_user_profile_update_password_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name_text"
            android:id="@+id/fragment_user_profile_lastname_text"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fragment_user_profile_user_lastname"
            app:layout_constraintBottom_toTopOf="@id/fragment_user_profile_user_birth"
            app:layout_constraintTop_toBottomOf="@id/fragment_user_profile_user_firstname"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_last_name"
            android:id="@+id/fragment_user_profile_user_lastname"
            android:textSize="30sp"
            app:layout_constraintLeft_toRightOf="@id/fragment_user_profile_lastname_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_user_profile_user_birth"
            app:layout_constraintTop_toBottomOf="@id/fragment_user_profile_user_firstname"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth_text"
            android:id="@+id/fragment_user_profile_birth"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fragment_user_profile_user_birth"
            app:layout_constraintBottom_toTopOf="@id/fragment_user_profile_update_user_information_button"
            app:layout_constraintTop_toBottomOf="@id/fragment_user_profile_user_lastname"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_birth"
            android:id="@+id/fragment_user_profile_user_birth"
            android:textSize="30sp"
            app:layout_constraintLeft_toRightOf="@id/fragment_user_profile_birth"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_user_profile_update_user_information_button"
            app:layout_constraintTop_toBottomOf="@id/fragment_user_profile_user_lastname"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/fragment_user_profile_home_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fragment_user_profile_update_user_information_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_user_profile_user_birth"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_info"
            android:id="@+id/fragment_user_profile_update_user_information_button"
            app:layout_constraintLeft_toRightOf="@id/fragment_user_profile_home_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_user_profile_user_birth"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>