<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.General.SupportActivity">

    <include layout="@layout/layout_top_bar"
        android:id="@+id/support_top_bar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/support_layout"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toBottomOf="@id/support_top_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/support_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/support_text_welcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/support_text_welcome"
            android:gravity="center"
            android:text="@string/support_welcome"
            app:layout_constraintTop_toBottomOf="@id/support_logo"
            app:layout_constraintBottom_toTopOf="@id/support_text_contact_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/support_text_contact_text"
            android:text="@string/contact_text"
            android:lines="2"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/support_text_welcome"
            app:layout_constraintBottom_toTopOf="@id/support_text_contact"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/support_text_contact"
            android:gravity="center"
            android:text="@string/contact_mail"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/support_text_contact_text"
            app:layout_constraintBottom_toTopOf="@id/support_version"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/support_version"
            android:text="@string/test_version"
            app:layout_constraintTop_toBottomOf="@id/support_text_contact"
            app:layout_constraintBottom_toTopOf="@id/support_web_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/support_web_address"
            android:text="@string/test_web_address"
            app:layout_constraintTop_toBottomOf="@id/support_version"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>