<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/art_image"
            android:src="@mipmap/ic_launcher"
            android:paddingStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/art_title"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:id="@+id/art_title"
            android:paddingStart="10dp"
            android:text="@string/test3"
            android:gravity="center|start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/art_author"
            app:layout_constraintStart_toEndOf="@id/art_image"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:id="@+id/art_author"
            android:paddingStart="10dp"
            android:text="@string/test2"
            android:gravity="center|start"
            app:layout_constraintTop_toBottomOf="@id/art_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/art_image"
            app:layout_constraintEnd_toStartOf="@id/art_date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:id="@+id/art_date"
            android:paddingEnd="10dp"
            android:text="@string/test4"
            android:gravity="center|end"
            app:layout_constraintStart_toEndOf="@id/art_author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/art_title"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>